--- a/cpp_notebook/00_day1.md
+++ b/cpp_notebook/00_day1.md
@@ -2,7 +2,7 @@
 
 ## material
 
-after much poking around on reddit, the ISO C++ website, and various other blogs from C++ developers, i decided to use ***C++ Primer*** (Lippman) as my primary beginner's resource for learning the language of C++! i've also heard/seen good things about Scott Meyer's ***Effective*** series, so i look forward to reading that after *Primer*.
+after much poking around on reddit, the ISO C++ website, and various other blogs from C++ developers, i decided to use ***C++ Primer*** (Lippman) as my primary beginner's resource for learning the language of C++! i've also heard/seen good things about Scott Meyers' ***Effective*** series, so i look forward to reading that after *Primer*.
 
 ## dev setup
 
