minor rendering issues

--- a/cpp_notebook/00_day1.md
+++ b/cpp_notebook/00_day1.md
@@ -16,7 +16,7 @@ i admittedly got caught up in the hype of finding "the most effective" developme
 - [Clang](https://clang.llvm.org/)
 	- "faithful implementation of the C++ language standard"
 	- "useful as an excellent extra compiler to run to catch errors alongside your chosen production compiler"
-	- quotes from [Quora](https://www.quora.com/Which-is-the-best-compiler-for-C-C++-programming#!n=24)
+		- quotes from [Quora](https://www.quora.com/Which-is-the-best-compiler-for-C-C++-programming#!n=24) lol
 	
 **Debuggers / Analyzers**:
 
