--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -2,7 +2,7 @@
 
 ## primitive built-in types (2.1)
 
-#### new core ideas
+### new core ideas
 - arithmetic types
 - conversion rules
 - literals
@@ -10,7 +10,7 @@
 	- escape sequences
 	- specifying types of literals with prefixes or suffixes
 
-#### misc conventions and tips
+### misc conventions and tips
 - unless you need to get close to hardware, here are general rules of thumb for arithmetic types (justifications in section 2.1.1):
 	- use an *unsigned* type prefix when you know that the values **cannot** be negative.
 		- *unsigned* by itself is an abbreviation for *unsigned int*.
@@ -28,7 +28,7 @@
 
 ## variables (2.2)
 
-#### new core ideas
+### new core ideas
 - initialization (2.2.1)
 	- **initialization is not assignment**, even though they both use the = symbol. 
 		- initialization happens when a variable is given a value when it is created.
@@ -40,7 +40,7 @@
 	- to use the same variable in multiple files, we must **define** that variable in **one** file. other files that use that variable must **declare**, but not define, that variable.
 - rules for identifiers (2.2.3)
 
-#### misc conventions and tips
+### misc conventions and tips
 - **initialize every object of built-in type!**
 	- uninitialized variables cause runtime problems!
 - define variables close to where they're first used.
@@ -50,7 +50,7 @@
 
 ## compound types (2.3)
 
-#### new core ideas
+### new core ideas
 - base type vs declarator
 	- in the following example, *int* is the base type
 	- i, *p, and &r are declarators.
@@ -81,7 +81,7 @@
 	- *void** pointers can hold the address of objects of any type, but are limited in usage.
 - references to pointers, pointers to pointers
 
-#### misc conventions and tips
+### misc conventions and tips
 - the & and * symbols used in declarations have nothing to do with the & (address-of) and * (dereference) operators.
 	- think of them as completely different symbols!
 - older programs might use a preprocessor variable named *NULL* from *cstdlib* to initialize a null pointer.
@@ -110,7 +110,7 @@ int* p2; // p2 is a pointer to int
 
 ## *const* qualifier (2.4)
 
-#### new core ideas
+### new core ideas
 - *const*-ness of a variable only matters for operations that might change it.
 - **by default, const objects are local to a file.**
 	- when we define a const with the same name in multiple files, it is as if we had written definitions for separate variables in each file
@@ -161,7 +161,7 @@ constant expressions (skimmed)
 
 
 
-#### misc conventions and tips
+### misc conventions and tips
 - https://isocpp.org/wiki/faq/const-correctness
 - **read declarations from right to left!**
 - generally a good idea to use *constexpr* for variables that you intend to use as constant expressions.
