--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -66,8 +66,8 @@
 - a **pointer** (signified by a *declarator* with the * type modifier) points to another type.
 	- unlike a reference, a pointer is an object in its own right.
 	- a pointer holds the address of another object.
-		- **address-of operator *&* **
-	- the **dereference operator * ** yields the object that a pointer points to.
+		- **address-of operator &**
+	- the **dereference operator \* ** yields the object that a pointer points to.
 		- can only be used on a valid pointer that points to an object.
 - pointer usage
 	- a *valid* pointer is one that:
@@ -132,7 +132,7 @@ const int &r1 = i; // reference to object of type const int
 double dval = 3.14;
 const double *cptr = &dval; // pointer to object of type const double
 ~~~
-- *pointers to const* have the same general idea as references to const.
+- ***pointers to const*** have the same general idea as references to const.
 	- **defining a pointer as a pointer to const affects only what we can do with the pointer.**
 	- we can use a pointer to const to point to a **non**const object
 - **important to remember that there is no guarantee that an object pointed to by a pointer to const won't change by other means.**
@@ -145,7 +145,7 @@ const double pi = 3.14;
 const double *const pip = &pi; // const pointer to object of type const double
 ~~~
 - because pointers are objects, we can have a pointer that is itself const.
-- *const pointers* are pointers that can't change what they're pointing to after initialization. (same behavior as any const object)
+- ***const pointers*** are pointers that can't change what they're pointing to after initialization. (same behavior as any const object)
 - **the fact that a pointer is itself const says nothing about whether we can use the pointer to change the underlying object.**
 - *top-level const* vs *low-level const*
 	- top-level const indicates that an object itself is const. it is ignored when we copy an object.
@@ -159,12 +159,23 @@ constant expressions (skimmed)
 	- can only use on literal types (arithmetic types, reference, and pointers)
 	- imposes a top-level const, so order would look different from previous rules.
 
-
-
 ### misc conventions and tips
 - https://isocpp.org/wiki/faq/const-correctness
 - **read declarations from right to left!**
 - generally a good idea to use *constexpr* for variables that you intend to use as constant expressions.
+
+
+## dealing with types (2.5)
+
+### new core ideas
+- type aliases
+	- can be declared with the *typedef* keyword (old) or *alias declaration* with the *using* keyword (C++11)
+	- after being defined, type aliases can appear wherever a type name can appear
+	- can be tricky with pointers
+- 
+	
+
+### misc conventions and tips
 
 
 
