fix bolding for asterick?

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -67,7 +67,7 @@
 	- unlike a reference, a pointer is an object in its own right.
 	- a pointer holds the address of another object.
 		- **address-of operator &**
-	- the **dereference operator \* ** yields the object that a pointer points to.
+	- the **dereference operator &ast;** yields the object that a pointer points to.
 		- can only be used on a valid pointer that points to an object.
 - pointer usage
 	- a *valid* pointer is one that:
