finish ch2 content

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -29,16 +29,24 @@
 ## variables (2.2)
 
 ### new core ideas
-- initialization (2.2.1)
+- initialization
 	- **initialization is not assignment**, even though they both use the = symbol. 
 		- initialization happens when a variable is given a value when it is created.
 		- assignment obliterates an object's current value and replaces that value with a new one.
 	- list initialization
 	- default initialization
-- declaration vs definition (2.2.2)
-	- *extern* keyword
+- declaration vs definition
+	- variables must be defined exactly once but can be declared multiple times.
+	- *extern* keyword declares but does not define.
 	- to use the same variable in multiple files, we must **define** that variable in **one** file. other files that use that variable must **declare**, but not define, that variable.
-- rules for identifiers (2.2.3)
+	
+~~~
+extern int i; // declares but does not define i
+int j; // declares and defines j
+extern double pi = 3.14; // defines pi (overriding extern keyword)
+~~~
+
+- rules for identifiers (variable names)
 
 ### misc conventions and tips
 - **initialize every object of built-in type!**
@@ -115,6 +123,16 @@ int* p2; // p2 is a pointer to int
 - **by default, const objects are local to a file.**
 	- when we define a const with the same name in multiple files, it is as if we had written definitions for separate variables in each file
 	- to define a single instance of a const variable across multiple files, use the *extern* keyword on both its definition and declaration(s).
+
+~~~
+// file 1.cc
+extern const int bufSize = fcn(); // defines and initializes a const that is accessible to other files
+~~~
+
+~~~
+// file_1.h
+extern const int bufSize; // same bufSize as defined in file_1.cc
+~~~
 	
 uses of the const qualifier:
 
@@ -151,13 +169,13 @@ const double *const pip = &pi; // const pointer to object of type const double
 	- top-level const indicates that an object itself is const. it is ignored when we copy an object.
 	- low-level const indicates that a pointer or reference point/refer to a const (appears in the base type of compound types). when we copy an object, both objects must have the same low-level const qualification or there must be a conversion between the types of the two objects.
 	
-constant expressions (skimmed)
+constant expressions (skimmed, refer to Primer for details)
 
 - constant expressions are expressions whose values cannot change and that can be evaluated at compile time.
 	- a literal or a const object that is initialized from a constant expression.
 - we can ask the compiler to verify that a variable is a constant expression by using the *constexpr* keyword in its declaration. (C++11)
 	- can only use on literal types (arithmetic types, reference, and pointers)
-	- imposes a top-level const, so order would look different from previous rules.
+	- imposes a top-level const, so order in some cases would look different from previous rules.
 
 ### misc conventions and tips
 - https://isocpp.org/wiki/faq/const-correctness
@@ -172,13 +190,15 @@ constant expressions (skimmed)
 	- can be declared with the *typedef* keyword (old) or *alias declaration* with the *using* keyword (C++11)
 	- after being defined, type aliases can appear wherever a type name can appear
 	- can be tricky with pointers
-- 
-	
+- ***auto*** type specifier (C++11)
+	- let compiler deduce the type for us from the initializer.
+	- refer to Primer for rules and examples.
+	- & (address-of) of an int object has type int*
+	- & of a const object has type quality low-level const
+- ***decltype*** type specifier (C++11)
+	- returns the type of its operand (gives the same type as the type that would've been returned by the expression inside the operand).
+	- refer to Primer.
 
-### misc conventions and tips
-
-
-
-## things to follow up on
+## ch2 things to follow up on
 - what does it mean to be a pointer "one location past the end of an object"
-- if you bind a reference to const to a nonconst object, then change the nonconst object directly, does the reference to const also change when you next use it? intuition says yes, but the temporary object concept says no.
+- if you bind a reference to const to a nonconst object, then change the nonconst object directly, does the reference to const also change when you next use it? my intuition says yes, but the temporary object concept says no.
