--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -33,8 +33,12 @@
 	- **initialization is not assignment**, even though they both use the = symbol. 
 		- initialization happens when a variable is given a value when it is created.
 		- assignment obliterates an object's current value and replaces that value with a new one.
-	- list initialization
+	- list initialization (C++11)
+		- braced lists of initializers can be used.
+		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (int type object being list-initialized with a long double initializer)
 	- default initialization
+		- without an explicit initializer, built-in type variables defined outside any function body are initialized to zero, defined inside a function are uninitialized.
+		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers (like std::string)
 - declaration vs definition
 	- variables must be defined exactly once but can be declared multiple times.
 	- *extern* keyword declares but does not define.
@@ -86,7 +90,7 @@ extern double pi = 3.14; // defines pi (overriding extern keyword)
 	- we can use valid pointers in conditions
 		- null pointers evaluate to false
 		- nonzero pointers evaluate to true
-	- *void** pointers can hold the address of objects of any type, but are limited in usage.
+	- *void** pointers can hold the address of objects of any type, but cannot be dereferenced.
 - references to pointers, pointers to pointers
 
 ### misc conventions and tips
@@ -142,6 +146,7 @@ const int &r1 = i; // reference to object of type const int
 ~~~
 - ***reference to const* just means we can't use that reference to modify the object to which the reference is bound.**
 	- whether a reference refers to a const or nonconst type affects what we can do with that reference, not whether we can alter the binding of the reference itself (we can't alter the binding of any reference). 
+	- const objects require the use of references to const, but references to const are not limited to use with const objects.
 - we can bind a *reference to const* to any expression that can be converted to the type of the reference, including:
 	- a **non**const object, a literal, or a more general expression.
 	- behind the scenes: unnamed **temporary objects** are created by compiler to store results from evaluating expressions / conversions.
@@ -153,6 +158,7 @@ const double *cptr = &dval; // pointer to object of type const double
 - ***pointers to const*** have the same general idea as references to const.
 	- **defining a pointer as a pointer to const affects only what we can do with the pointer.**
 	- we can use a pointer to const to point to a **non**const object
+	- we can store the address of a const object only in a pointer to const.
 - **important to remember that there is no guarantee that an object pointed to by a pointer to const won't change by other means.**
 
 ~~~
@@ -167,15 +173,17 @@ const double *const pip = &pi; // const pointer to object of type const double
 - **the fact that a pointer is itself const says nothing about whether we can use the pointer to change the underlying object.**
 - *top-level const* vs *low-level const*
 	- top-level const indicates that an object itself is const. it is ignored when we copy an object.
-	- low-level const indicates that a pointer or reference point/refer to a const (appears in the base type of compound types). when we copy an object, both objects must have the same low-level const qualification or there must be a conversion between the types of the two objects.
+	- low-level const indicates that a pointer or reference points/refers to a const (appears in the base type of compound types). 
+		- low-level const is never ignored.
+		- when we copy an object, both objects must have the same low-level const qualification or there must be a conversion between the types of the two objects.
 	
 constant expressions (skimmed, refer to Primer for details)
 
 - constant expressions are expressions whose values cannot change and that can be evaluated at compile time.
-	- a literal or a const object that is initialized from a constant expression.
+	- can be a literal or a const object that is initialized from a constant expression.
 - we can ask the compiler to verify that a variable is a constant expression by using the *constexpr* keyword in its declaration. (C++11)
 	- can only use on literal types (arithmetic types, reference, and pointers)
-	- imposes a top-level const, so order in some cases would look different from previous rules.
+	- imposes a top-level const, so order of declaration in some cases would look different from previous rules.
 
 ### misc conventions and tips
 - https://isocpp.org/wiki/faq/const-correctness
@@ -198,6 +206,39 @@ constant expressions (skimmed, refer to Primer for details)
 - ***decltype*** type specifier (C++11)
 	- returns the type of its operand (gives the same type as the type that would've been returned by the expression inside the operand).
 	- refer to Primer.
+	
+
+## introductory data structure creation (2.6)
+
+### new core ideas
+- ***struct*** keyword to define classes.
+- need semicolon to close class definition.
+- the **preprocessor** runs before the compiler. 
+	- it replaces *#include* directives with the contents of the specified header and follows other directives as well.
+- in order to ensure that class definition is the same across files, classes are usually defined in **header** files. 
+	- whenever a header is updated, the source files that use that header must be recompiled to get the new or changed declarations.
+	- **header guards** used by the preprocessor protect against multiple inclusion.
+		- *#define* directive takes a name and defines that name as a preprocessor variable
+		- *#ifdef* and *#ifndef* test whether a given preprocessor variable has been defined or not
+		- *#endif* closes *#ifdef* or *#ifndef*
+		
+~~~
+// Sales_data.h
+
+#ifndef SALES_DATA_H
+#define SALES_DATA_H
+#include <string>
+struct Sales_data {
+	// class stuff
+};
+#endif
+~~~
+
+### misc conventions and tips
+- **headers should have guards!**
+	- preprocessor variables must be unique throughout the program. ensure uniqueness by basing the guard's name on the name of the class in the header.
+		- Sales_data.h -> SALES_DATA_H
+		
 
 ## ch2 things to follow up on
 - what does it mean to be a pointer "one location past the end of an object"
