--- a/cpp_notebook/primer/ch-01.md
+++ b/cpp_notebook/primer/ch-01.md
@@ -8,7 +8,7 @@ not gonna take traditional notes on the material, just some core ideas that are 
 	- using istream state as a condition (see 1.4.3)
 - namespaces and the scope :: operator
 - classes and the dot . operator.
-- "a primary focus of the design of C++ is to make it possible to define class types that behave as naturally as the build-in types"
+- "a primary focus of the design of C++ is to make it possible to define class types that behave as naturally as the built-in types"
 - file redirection on unix (see 1.5.1)
 
 
