--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -18,9 +18,9 @@
 	- use *double* for floating-point computations.
 	- **don't use plain *char* or *bool* in arithmetic expressions**. use them only to hold characters or truth values. if you really need a tiny integer, explicitly specify *signed char* or *unsigned char*.
 	- **avoid undefined and implementation-defined behavior**, for example:
-		- **don't** assign an out-of-range value to an object of signed type.
-		- **don't** mix signed and unsigned types.
-		- **don't** assume that the size of an int is a fixed and known value.
+		- don't assign an out-of-range value to an object of signed type.
+		- don't mix signed and unsigned types.
+		- don't assume that the size of an int is a fixed and known value.
 - two string literals that appear adjacent to one another and that are separated by only spaces, tabs, or newlines are automatically concatenated into a single literal.
 	- useful for writing string literal that's too large to fit comfortably on a single line
 - [an example use case of literal prefix](http://www.cplusplus.com/forum/beginner/106449/#msg576166)
@@ -40,9 +40,9 @@
 		- without an explicit initializer, built-in type variables defined outside any function body are initialized to zero, defined inside a function are uninitialized.
 		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers (like std::string)
 - declaration vs definition
-	- variables must be defined exactly once but can be declared multiple times.
+	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
-	- to use the same variable in multiple files, we must **define** that variable in **one** file. other files that use that variable must **declare**, but not define, that variable.
+	- to use the same variable in multiple files, we must define that variable in one file. other files that use that variable must declare, but not define, that variable.
 	
 ~~~
 extern int i; // declares but does not define i
@@ -64,7 +64,7 @@ extern double pi = 3.14; // defines pi (overriding extern keyword)
 
 ### new core ideas
 - base type vs declarator
-	- in the following example, *int* is the base type
+	- in the following example, *int* is the base type.
 	- i, *p, and &r are declarators.
 	- 1024, &i, and i are initializers.
 
@@ -182,7 +182,7 @@ constant expressions (skimmed, refer to Primer for details)
 - constant expressions are expressions whose values cannot change and that can be evaluated at compile time.
 	- can be a literal or a const object that is initialized from a constant expression.
 - we can ask the compiler to verify that a variable is a constant expression by using the *constexpr* keyword in its declaration. (C++11)
-	- can only use on literal types (arithmetic types, reference, and pointers)
+	- can only use on literal types (arithmetic types, references, and pointers)
 	- imposes a top-level const, so order of declaration in some cases would look different from previous rules.
 
 ### misc conventions and tips
