--- a/cpp_notebook/primer/ch-01.md
+++ b/cpp_notebook/primer/ch-01.md
@@ -3,10 +3,15 @@
 not gonna take traditional notes on the material, just some core ideas that are specific to c++ / that i haven't encountered before in other languages and some additional external links / other things to follow up on.
 
 ## new core ideas
-- istream, ostream; cin, cout, cerr, clog; <<, >> operators
+- iostream library
+	- **output operator <<** and **input operator >>**
+	- istream, ostream
+	- **cin, cout, cerr, clog**
 	- behind the scenes of chaining cout / cin statements
-	- using istream state as a condition (see 1.4.3)
-- namespaces and the scope :: operator
+	- using istream state as a~~~~ condition (see 1.4.3)
+- **namespaces** and the **scope operator ::**
+	- namespaces allow us to avoid inadvertent collisions between the names we define and uses of those same names inside a library.
+	- all the names defined by the standard library are in the *std* namespace.
 - classes and the dot . operator.
 - "a primary focus of the design of C++ is to make it possible to define class types that behave as naturally as the built-in types"
 - file redirection on unix (see 1.5.1)
