--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -5,22 +5,44 @@
 ### new core ideas
 - arithmetic types
 - conversion rules
+	- *bool* <-> non*bool*
+		- zero is false, nonzero is true.
+	- floating-point <-> integral
+		- truncate / add fractional part of zero.
+	- assigning out-of-range
+		- unsigned types wrap around, signed types become undefined.
 - literals
-	- scientific notation for floating point literals
 	- escape sequences
-	- specifying types of literals with prefixes or suffixes
+	- can specify types of literals with prefixes or suffixes. common ones are:
+		- *u* suffix for unsigned integer, *f* suffix for float
+
+~~~
+// integer literals (default to smallest type it fits from int, long, or long long)
+20 // decimal, defaults to signed
+024 // octal
+0x14 // hexadecimal
+~~~	
+
+~~~
+// floating point literals (default to type double)
+3.14
+3.14E0 or 3.14e0 // scientific notation
+0.
+.001
+~~~
+
 
 ### misc conventions and tips
 - unless you need to get close to hardware, here are general rules of thumb for arithmetic types (justifications in section 2.1.1):
-	- use an *unsigned* type prefix when you know that the values **cannot** be negative.
+	- use an ***unsigned*** type prefix when you know that the values **cannot** be negative.
 		- *unsigned* by itself is an abbreviation for *unsigned int*.
-	- use *int* for integer arithmetic. if you need larger integers, use *long long*.
-	- use *double* for floating-point computations.
+	- use ***int*** for integer arithmetic. if you need larger integers, use *long long*.
+	- use ***double*** for floating-point computations.
 	- **don't use plain *char* or *bool* in arithmetic expressions**. use them only to hold characters or truth values. if you really need a tiny integer, explicitly specify *signed char* or *unsigned char*.
 	- **avoid undefined and implementation-defined behavior**, for example:
-		- don't assign an out-of-range value to an object of signed type.
-		- don't mix signed and unsigned types.
-		- don't assume that the size of an int is a fixed and known value.
+		- **don't assign an out-of-range value to an object of signed type.**
+		- **don't mix signed and unsigned types.**
+		- **don't assume that the size of an int is a fixed and known value.**
 - two string literals that appear adjacent to one another and that are separated by only spaces, tabs, or newlines are automatically concatenated into a single literal.
 	- useful for writing string literal that's too large to fit comfortably on a single line
 - [an example use case of literal prefix](http://www.cplusplus.com/forum/beginner/106449/#msg576166)
@@ -35,7 +57,7 @@
 		- assignment obliterates an object's current value and replaces that value with a new one.
 	- list initialization (C++11)
 		- braced lists of initializers can be used.
-		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (int type object being list-initialized with a long double initializer)
+		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information (*int* type object being list-initialized with a *long double* initializer)
 	- default initialization
 		- without an explicit initializer, built-in type variables defined outside any function body are initialized to zero, defined inside a function are uninitialized.
 		- classes control how we initialize objects of that class type. most classes let us define objects without explicit initializers (like std::string)
@@ -181,7 +203,7 @@ constant expressions (skimmed, refer to Primer for details)
 
 - constant expressions are expressions whose values cannot change and that can be evaluated at compile time.
 	- can be a literal or a const object that is initialized from a constant expression.
-- we can ask the compiler to verify that a variable is a constant expression by using the *constexpr* keyword in its declaration. (C++11)
+- we can ask the compiler to verify that a variable is a constant expression by using the ***constexpr*** keyword in its declaration. (C++11)
 	- can only use on literal types (arithmetic types, references, and pointers)
 	- imposes a top-level const, so order of declaration in some cases would look different from previous rules.
 
