--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -9,9 +9,11 @@
 
 ~~~
 #include <iostream>
+#include <string>
 using std::cin; using std::cout;
+using std::string;
 int main() {
-	int i;
+	string i;
 	cin >> i; // cin is a synonym for std::cin
 	cout << i << '\n'; // cout is a synonym for std::cout
 	return 0;
@@ -21,7 +23,69 @@ int main() {
 ### misc conventions and tips
 - **code in headers should not use *using* declarations**
 	- recall contents of a header are copied into the including programs text. if a header has a *using* declaration, then every program that includes that header gets that same *using* declaration.
-	
+
+
+## library *string* type (3.2)
+
+### new core ideas
+- forms of initialization
+	- *default initialize* to empty string (covered before in ch2).
+	- *copy initialize* copies the initializer on the right-hand side of an = sign. this can be used with a single initializer.
+	- *direct initialize* omits the = sign and can be used with initializers that consist of more than one value.
+~~~
+// ways to initialize a string
+string s1; // default initialization to the empty string
+string s2(s1); // s2 is a copy of s1, direct initialized
+string s2 = s1; // same as above, copy initialized
+string s3("value"); // s3 is a copy of the string literal, direct initialized
+string s3 = "value"; // same as above, copy initialized
+string s4(n, 'c'); // initialize s4 with n copies of the character 'c', direct initialized
+~~~
+
+- **classes can define how objects are created/initialized, operations that are called by name, and what various operator symbols (<<, +, etc.) mean when applied to objects of the class' type.**
+~~~
+// string operations
+// 's' is string, 'os' is output stream, 'is' is input stream
+// positions are zero-indexed
+
+os << s // writes s onto os, returns os
+is >> s // reads whitespace-separated string from is into s, returns is
+getline(is, s) // reads a line of input from is into s (not including the newline), returns is.
+s.empty() // returns true if s is empty, otherwise returns false
+s.size() // returns the (unsigned size_type) number of characters in s
+s[n] // returns a reference to the char at position n in s.
+s1 + s2 // returns a string that is the concatenation of s1 and s2
+s1 = s2 // replaces characters in s1 with a copy of s2
+
+// the strings s1 and s2 are equal if they contain the same characters.
+// equality is case sensitive. 
+// comparisons use case-senstive dictionary ordering.
+s1 == s2 // !=, <, <=, >, >=
+~~~
+
+- concatenation
+	- the string library lets us convert both character literals and character string literals to strings (so we can automatically concatenate them).
+	- at least one operand to each + operator must be of *string* type.
+	- **string literals are not of type *string* from the C++ standard library.**
+~~~
+string s4 = s1 + ", " + s2 + '\n'; // ok
+string s5 = "hello" + ", " + s2; // error: no string operand for first + operator
+string s6 = s1 + ", " + "world"; // ok, right equivalent to (s1 + ", ") + "world"
+~~~
+
+- processing a string
+	- *cctype* library has functions for interpreting characters and changing characteristics like upper/lowercase
+	- **range-based *for* ** is good for processing every character in a string.
+
+### misc conventions and tips
+- direct initialize is preferred when initializing objects with multiple values (parameters?)
+- **don't use signed *int*s in expressions that use *size()*.**
+	- size() returns a *string::size_type* value.
+	- use auto to get the type if necessary, but remember it's unsigned!
+- the C++ library incorporates the C library. the C++ version of C library headers are c*name* (remove the .h suffix and precede the name with the letter 'c').
+	- when we include *cctype*, we are actually including the C++ version of the C library header *ctype.h*. 
+	- using the c*name* form in C++ lets us access the C library header's namespace through *std*.
+
 
 
 ## things to follow up on
